modific DataConverterImpl.java, FileReaderImpl.java, Main.java and ReportGeneratorImpl.java and Storage.java. Refactor: Apply linter fixes, improve data validation and update Storage for thread-safety